--- a/node0.toml
+++ b/node0.toml
@@ -1,17 +1,20 @@
 [parity]
 chain = "demo-spec.json"
 base_path = "/tmp/parity0"
+
 [network]
 port = 30300
+
 [rpc]
 port = 8540
-apis = ["web3", "eth", "net", "personal", "parity", "parity_set", "traces", "rpc", "parity_accounts"]
+apis = ["all"]
+
 [ui]
 port = 8180
-[dapps]
-port = 8080
+
 [account]
 password = ["node.pwds"]
+
 [mining]
-engine_signer = "0x00Bd138aBD70e2F00903268F3Db08f2D25677C9e"
+engine_signer = "0x4b36dA8ce32F25F13A19B5d4b40d4e97fA45df5f"
 reseal_on_txs = "none"
